Fixed default map and rider compiler issue

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=38AB0DFF41ACCE8811FEE6A884053422
-ProjectName=Third Person Game Template
+ProjectName=Alchemist
+Description=I like your funny words magic man - Sun Tzu
+
