Added attempt at delegate functions for hitbox to use for multi hit detection

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,3 +90,6 @@ SupportedAgentsMask=(bSupportsAgent0=True,bSupportsAgent1=True,bSupportsAgent2=T
 EnvQueryManagerClassName=/Script/AIModule.EnvQueryManager
 bAllowControllersAsEQSQuerier=True
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/Alchemist.PlayerCharacter.OnHitboxCollision",NewName="/Script/Alchemist.PlayerCharacter.OnHitBoxDetect")
