--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6A847D0642FE909952314CA2BF342332
-ProjectName=Arkham Attempt
-Description=Attempt at making the combat of batman arkham series for learning.
+ProjectName=AnimationAndCombatTesting
+Description=Attempt at recreating multiple games combat mechanics for learning
+CopyrightNotice=
 
