--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,3 +92,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.powerCurveOnShit",NewName="/Script/UnrealTesting.ThirdPersonController.powerCurveOnHit")
