--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -95,6 +95,8 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.powerCurveOnShit",NewName="/Script/UnrealTesting.ThirdPersonController.powerCurveOnHit")
++FunctionRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.BlueprintTest",NewName="/Script/UnrealTesting.ThirdPersonController.OnWandChanged")
++PropertyRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.WandChangedDelegate",NewName="/Script/UnrealTesting.ThirdPersonController.TestingDelegate")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
