--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -97,6 +97,7 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.powerCurveOnShit",NewName="/Script/UnrealTesting.ThirdPersonController.powerCurveOnHit")
 +FunctionRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.BlueprintTest",NewName="/Script/UnrealTesting.ThirdPersonController.OnWandChanged")
 +PropertyRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.WandChangedDelegate",NewName="/Script/UnrealTesting.ThirdPersonController.TestingDelegate")
++FunctionRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.OnWandChanged",NewName="/Script/UnrealTesting.ThirdPersonController.OnCannonFired")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
