Added base stats, started to rework for this to be used by ai and character

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -94,10 +94,12 @@ ManualIPAddress=
 
 
 [CoreRedirects]
-+PropertyRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.powerCurveOnShit",NewName="/Script/UnrealTesting.ThirdPersonController.powerCurveOnHit")
-+FunctionRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.BlueprintTest",NewName="/Script/UnrealTesting.ThirdPersonController.OnWandChanged")
-+PropertyRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.WandChangedDelegate",NewName="/Script/UnrealTesting.ThirdPersonController.TestingDelegate")
-+FunctionRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.OnWandChanged",NewName="/Script/UnrealTesting.ThirdPersonController.OnCannonFired")
++PropertyRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.powerCurveOnShit",NewName="/Script/UnrealTesting.PlayerCharacter.powerCurveOnHit")
++FunctionRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.BlueprintTest",NewName="/Script/UnrealTesting.PlayerCharacter.OnWandChanged")
++PropertyRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.WandChangedDelegate",NewName="/Script/UnrealTesting.PlayerCharacter.TestingDelegate")
++FunctionRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.OnWandChanged",NewName="/Script/UnrealTesting.PlayerCharacter.OnCannonFired")
++ClassRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController",NewName="/Script/UnrealTesting.PlayerCharacter")
++ClassRedirects=(OldName="/Script/UnrealTesting.StandardAi",NewName="/Script/UnrealTesting.BaseAi")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
