Reworked some of ai section

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -100,6 +100,7 @@ ManualIPAddress=
 +FunctionRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController.OnWandChanged",NewName="/Script/UnrealTesting.PlayerCharacter.OnCannonFired")
 +ClassRedirects=(OldName="/Script/UnrealTesting.ThirdPersonController",NewName="/Script/UnrealTesting.PlayerCharacter")
 +ClassRedirects=(OldName="/Script/UnrealTesting.StandardAi",NewName="/Script/UnrealTesting.BaseAi")
++FunctionRedirects=(OldName="/Script/UnrealTesting.BaseAi.OnGetHit",NewName="/Script/UnrealTesting.BaseAi.OnAiHit")
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
